--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <header class="container">
-        <h1 class="text-center text-primary my-5 my-sm-3">Money Expense</h1>
+        <h1 class="text-center text-primary my-xs-4 my-lg-5">Money Expense</h1>
     </header>
     <main class="container col-lg-12 d-flex justify-content-between">
         <div class="banner col-md-6 col-lg-6 col-sm-12 col-xs-12">
             <img src="img/960x0.jpg" alt="">
         </div>
         <div class="main-field col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <h3 class="text-center fw-bold my-4 my-sm-1">Income</h3>
-            <div class="row g-2 align-items-center w-50 mx-auto my-2">
+            <h3 class="text-center fw-bold mt-sm-3 my-md-4">Income</h3>
+            <div class="row g-2 align-items-center  w-50 mx-auto my-2">
                 <div class="col-auto col-md-4 text-end">
                     <label for="income" class="col-form-label">Income: </label>
                 </div>
